--- a/package.json
+++ b/package.json
@@ -1,11 +1,27 @@
 {
-  "name": "usm",
-  "version": "1.0.0",
-  "description": "Minimal USD Stable Coin",
+  "name": "usm-oracles",
+  "version": "0.0.4",
+  "description": "Oracle Integrations and Tools",
+  "author": "Jacob Eliosoff",
+  "license": "GPL-3.0-or-later",
   "main": "truffle-config.js",
-  "directories": {
-    "test": "test"
+  "engines": {
+    "node": ">= 10.12.0",
+    "npm": ">= 6.4.0",
+    "yarn": ">= 1.10.0"
   },
+  "files": [
+    "/contracts",
+    "!contracts/mocks/",
+    "!contracts/Migrations.sol"
+  ],
+  "keywords": [
+    "solidity",
+    "ethereum",
+    "smart",
+    "contracts",
+    "security"
+  ],
   "scripts": {
     "build": "buidler compile",
     "test": "buidler test test/*.js",
@@ -16,8 +32,6 @@
     "deploy:ganache": "yarn ganache && truffle migrate",
     "mainnet-ganache": "./scripts/mainnet-ganache.sh"
   },
-  "author": "Alex Roan",
-  "license": "GPL-3.0-or-later",
   "devDependencies": {
     "@nomiclabs/buidler": "^1.3.8",
     "@nomiclabs/buidler-truffle5": "^1.3.4",
